fix(timeline): 修复时间轴交互中的音频行高度调整范围判断
- 将音频行高度调整的范围判断从固定的波形和频率范围改为动态的音频子行范围
- 修复了右键重置音频行高度时的范围判断逻辑
- 使用 getLast() 方法替代 get(size() - 1) 来获取剪贴板事件列表中的最后一个元素